tests/golden/errors/unused_binding.kso
fn main
  x = 1
  print "hi"
