tests/golden/errors/unused_binding.stderr
error[unused]: unused binding `x`
  --> unused_binding.kso:1:1
   1 | x = 1
       ^
